# dual-caption

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  compose.dev.yaml  compose.yaml  dual_caption.py  feedback.py  fix_srt.py  i18n.py  json_to_srt.py  pyproject.toml  requirements.txt  retime.py  transcribe.py
.claude/: settings.local.json
scripts/: all.sh  fix.sh  format.sh  rebuild.sh
transcript_editor/: index.html
