[project]
name = "dual-caption"
version = "0.1.0"
description = "Transcribe audio, convert transcripts to SRT, and generate dual-language subtitles."
requires-python = ">=3.10"
dependencies = [
    "openai",
    "srt",
    "streamlit",
    "python-dotenv",
    "soniox",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "uv",
]

[project.scripts]
json-to-srt = "json_to_srt:main"
dual-caption = "dual_caption:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "dual_caption", "json_to_srt", "transcribe", "retime", "feedback", "i18n"]
